--- a/index.html
+++ b/index.html
@@ -14,8 +14,23 @@
     <h1 class="main-title">Lista de contatos</h1>
     <div class="container">
         <ul class="item">
-            <li class="list-item"><div class="list-item__img">
-                <img src="./imagens/1.jpg" alt="">
+            <li class="list-item">
+                <div class="list-item__img">
+                <img class="list-item___img" src="./imagens/1.jpg" alt="">
+                </div>
+                <div class="list-item__email">
+                    <p>Brennan George</p>
+                    <p>brennan.george@example.com</p>
+                </div>
+                 <div class="list-item__icons">
+                    <a href="#"><img src="./imagens/delete.png" alt=""></a>
+                    <a href="#"><img src="./imagens/edit.png" alt=""></a>
+                </div>
+            </li>
+            <li class="list-item">
+                <div class="list-item__img">
+                <img class="list-item___img" src="./imagens/2.jpg" alt="">
+                </div>
                 <div class="list-item__email">
                     <p>Brennan George</p>
                     <p>brennan.george@example.com</p>
@@ -24,56 +39,89 @@
                     <a href="#"><img src="./imagens/delete.png" alt=""></a>
                     <a href="#"><img src="./imagens/edit.png" alt=""></a>
                 </div>
-            </div></li>
-            <li class="list-item"><div class="list-item__img">
-                <img src="./imagens/2.jpg" alt="">
-                <div class="list-item__email">
-                    <p>Brennan George</p>
-                    <p>brennan.george@example.com</p>
-                </div>
-                <div class="list-item__icons">
-                    <a href="#"><img src="./imagens/delete.png" alt=""></a>
-                    <a href="#"><img src="./imagens/edit.png" alt=""></a>
-                </div>
-            </div></li>
-            <li class="list-item"><div class="list-item__img">
-                <img src="./imagens/3.jpg" alt="">
-                <div class="list-item__email">
-                    <p>Brennan George</p>
-                    <p>brennan.george@example.com</p>
-                </div>
-                <div class="list-item__icons">
-                    <a href="#"><img src="./imagens/delete.png" alt=""></a>
-                    <a href="#"><img src="./imagens/edit.png" alt=""></a>
-                </div>
-            </div></li>
-            <li class="list-item"><div class="list-item__img">
-                <img src="./imagens/4.jpg" alt="">
-                <div class="list-item__email">
-                    <p>Brennan George</p>
-                    <p>brennan.george@example.com</p>
-                </div>
-                <div class="list-item__icons">
-                    <a href="#"><img src="./imagens/delete.png" alt=""></a>
-                    <a href="#"><img src="./imagens/edit.png" alt=""></a>
-                </div>
-            </div></li>
-            <li class="list-item"><div class="list-item__img">
-                <img src="./imagens/5.jpg" alt="">
-                <div class="list-item__email">
-                    <p>Brennan George</p>
-                    <p>brennan.george@example.com</p>
-                </div>
-                <div class="list-item__icons">
-                    <a href="#"><img src="./imagens/delete.png" alt=""></a>
-                    <a href="#"><img src="./imagens/edit.png" alt=""></a>
-                </div>
-            </div>
+            
         </li>
+            <li class="list-item">
+                <div class="list-item__img">
+                <img class="list-item___img" src="./imagens/3.jpg" alt="">
+                </div>
+                <div class="list-item__email">
+                    <p>Brennan George</p>
+                    <p>brennan.george@example.com</p>
+                </div>
+                <div class="list-item__icons">
+                    <a href="#"><img src="./imagens/delete.png" alt=""></a>
+                    <a href="#"><img src="./imagens/edit.png" alt=""></a>
+                </div>
+            </li>
+            <li class="list-item">
+                <div class="list-item__img">
+                <img class="list-item___img" src="./imagens/4.jpg" alt="">
+                </div>
+                <div class="list-item__email">
+                    <p>Brennan George</p>
+                    <p>brennan.george@example.com</p>
+                </div>
+                <div class="list-item__icons">
+                    <a href="#"><img src="./imagens/delete.png" alt=""></a>
+                    <a href="#"><img src="./imagens/edit.png" alt=""></a>
+                </div>
+            
+            </li>
+            <li class="list-item">
+             <div class="list-item__img">
+                <img class="list-item___img" src="./imagens/5.jpg" alt="">
+             </div>
+            <div class="list-item__email">
+                    <p>Brennan George</p>
+                    <p>brennan.george@example.com</p>
+                </div>
+                <div class="list-item__icons">
+                    <a href="#"><img src="./imagens/delete.png" alt=""></a>
+                    <a href="#"><img src="./imagens/edit.png" alt=""></a>
+                </div>
+            </li>
+                <li class="list-item">
+                    <div class="list-item__img">
+                    <img class="list-item___img" src="./imagens/6.jpg" alt="">
+                    </div>
+                    <div class="list-item__email">
+                        <p>Brennan George</p>
+                        <p>brennan.george@example.com</p>
+                    </div>
+                    <div class="list-item__icons">
+                        <a href="#"><img src="./imagens/delete.png" alt=""></a>
+                        <a href="#"><img src="./imagens/edit.png" alt=""></a>
+                    </div>
+                </li>
+                <!--<li class="list-item">
+                    <div class="list-item__img">
+                    <img class="list-item-1___img" src="./imagens/7.jpg" alt="">
+                    </div>
+                    <div class="list-item__email">
+                        <p>Brennan George</p>
+                        <p>brennan.george@example.com</p>
+                    </div>
+                    <div class="list-item__icons">
+                        <a href="#"><img src="./imagens/delete.png" alt=""></a>
+                        <a href="#"><img src="./imagens/edit.png" alt=""></a>
+                    </div>
+                </li>
+                <li class="list-item">
+                    <div class="list-item__img">
+                    <img class="list-item-1___img" src="./imagens/8.jpg" alt="">
+                    </div>
+                    <div class="list-item__email">
+                        <p>Brennan George</p>
+                        <p>brennan.george@example.com</p>
+                    </div>
+                    <div class="list-item__icons">
+                        <a href="#"><img src="./imagens/delete.png" alt=""></a>
+                        <a href="#"><img src="./imagens/edit.png" alt=""></a>
+                    </div>
+                </li> -->
         </ul>
     </div>
-
-
 </body>
 
 </html>
