--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <div class="list-item__img">
                 <img class="list-item___img" src="./imagens/1.jpg" alt="">
                 </div>
-                <div class="list-item__email">
-                    <p>Brennan George</p>
-                    <p>brennan.george@example.com</p>
+                <div class="list-item_content">
+                    <p class="name">Brennan George</p>
+                    <p class="email">brennan.george@example.com</p>
                 </div>
                  <div class="list-item__icons">
                     <a href="#"><img src="./imagens/delete.png" alt=""></a>
@@ -31,9 +31,9 @@
                 <div class="list-item__img">
                 <img class="list-item___img" src="./imagens/2.jpg" alt="">
                 </div>
-                <div class="list-item__email">
-                    <p>Brennan George</p>
-                    <p>brennan.george@example.com</p>
+                <div class="list-item_content">
+                    <p class="name">Brennan George</p>
+                    <p class="email">brennan.george@example.com</p>
                 </div>
                 <div class="list-item__icons">
                     <a href="#"><img src="./imagens/delete.png" alt=""></a>
@@ -45,9 +45,9 @@
                 <div class="list-item__img">
                 <img class="list-item___img" src="./imagens/3.jpg" alt="">
                 </div>
-                <div class="list-item__email">
-                    <p>Brennan George</p>
-                    <p>brennan.george@example.com</p>
+                <div class="list-item_content">
+                    <p class="name">Brennan George</p>
+                    <p class="email">brennan.george@example.com</p>
                 </div>
                 <div class="list-item__icons">
                     <a href="#"><img src="./imagens/delete.png" alt=""></a>
@@ -58,9 +58,9 @@
                 <div class="list-item__img">
                 <img class="list-item___img" src="./imagens/4.jpg" alt="">
                 </div>
-                <div class="list-item__email">
-                    <p>Brennan George</p>
-                    <p>brennan.george@example.com</p>
+                <div class="list-item_content">
+                    <p class="name">Brennan George</p>
+                    <p class="email">brennan.george@example.com</p>
                 </div>
                 <div class="list-item__icons">
                     <a href="#"><img src="./imagens/delete.png" alt=""></a>
@@ -72,10 +72,10 @@
              <div class="list-item__img">
                 <img class="list-item___img" src="./imagens/5.jpg" alt="">
              </div>
-            <div class="list-item__email">
-                    <p>Brennan George</p>
-                    <p>brennan.george@example.com</p>
-                </div>
+             <div class="list-item_content">
+                <p class="name">Brennan George</p>
+                <p class="email">brennan.george@example.com</p>
+               </div>
                 <div class="list-item__icons">
                     <a href="#"><img src="./imagens/delete.png" alt=""></a>
                     <a href="#"><img src="./imagens/edit.png" alt=""></a>
@@ -85,9 +85,9 @@
                     <div class="list-item__img">
                     <img class="list-item___img" src="./imagens/6.jpg" alt="">
                     </div>
-                    <div class="list-item__email">
-                        <p>Brennan George</p>
-                        <p>brennan.george@example.com</p>
+                    <div class="list-item_content">
+                        <p class="name">Brennan George</p>
+                        <p class="email">brennan.george@example.com</p>
                     </div>
                     <div class="list-item__icons">
                         <a href="#"><img src="./imagens/delete.png" alt=""></a>
